NLA editor tracks checkbox overlapping names when left side panel is too small #109455

Closed
opened 2023-06-28 17:30:05 +02:00 by mfn-mln · 4 comments
First-time contributor

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: AMD Radeon HD 7600M Series ATI Technologies Inc. 4.5.13399 Core Profile Context 0

Blender Version
Broken: version: 3.6.0, branch: blender-v3.6-release, commit date: 2023-06-27 08:08, hash: c7fc78b81ecb
Worked: (newest version of Blender that worked as expected)

Short description of error
NLA editor tracks look wrong when the left side panel is too small

Exact steps for others to reproduce the error (Based on the default startup)

  1. Add a keyframe
  2. Open the NLA editor
  3. Push down action to create a track
  4. Drag the left side panel to the left to the left to make it smaller
  5. Now the checkbox is over the text (this is the bug)
**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: AMD Radeon HD 7600M Series ATI Technologies Inc. 4.5.13399 Core Profile Context 0 **Blender Version** Broken: version: 3.6.0, branch: blender-v3.6-release, commit date: 2023-06-27 08:08, hash: `c7fc78b81ecb` Worked: (newest version of Blender that worked as expected) **Short description of error** NLA editor tracks look wrong when the left side panel is too small **Exact steps for others to reproduce the error (Based on the default startup)** 1. Add a keyframe 2. Open the NLA editor 3. Push down action to create a track 4. Drag the left side panel to the left to the left to make it smaller 5. Now the checkbox is over the text (this is the bug)
mfn-mln added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-06-28 17:30:05 +02:00
Member

图片

Do you mean this? If the region is really small we probably can't do much about it... What does it look like on your side?

![图片](/attachments/da0745bf-005d-411c-afdf-a7d1158f68c6) Do you mean this? If the region is _really_ small we probably can't do much about it... What does it look like on your side?
8.5 KiB
YimingWu added
Status
Needs Information from User
Interest
User Interface
and removed
Status
Needs Triage
labels 2023-06-29 01:56:57 +02:00
Author
First-time contributor

Not too small. Not small at all if the track has a long name. In blender 3.5, blender didn't show the full name if it was too long. it doesn't do it correctly now. Maby this happen because the star icon is use to be on the left side.

Not too small. Not small at all if the track has a long name. In blender 3.5, blender didn't show the full name if it was too long. it doesn't do it correctly now. Maby this happen because the star icon is use to be on the left side.
Member

I see. It probably shouldn't overlap but well... you probably will want to have enough space if you have a wider screen. Will poke UI guys and see if they can fix this visual artefact.

I see. It probably shouldn't overlap but well... you probably will want to have enough space if you have a wider screen. Will poke UI guys and see if they can fix this visual artefact.
YimingWu changed title from NLA editor tracks look wrong when the left side panel is too small to NLA editor tracks checkbox overlapping names when left side panel is too small 2023-06-29 10:29:41 +02:00
Member

In blender 3.5, blender didn't show the full name if it was too long. it doesn't do it correctly now

Just to be clear, 3.5 was drawing over the long name just like 3.6, but we now got a portion that draws transparent, will check on this

>In blender 3.5, blender didn't show the full name if it was too long. it doesn't do it correctly now Just to be clear, 3.5 was drawing over the long name just like 3.6, but we now got a portion that draws transparent, will check on this
Philipp Oeser added
Status
Confirmed
and removed
Status
Needs Info from Developers
labels 2023-06-29 10:48:42 +02:00
Philipp Oeser self-assigned this 2023-06-29 10:48:47 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-03 09:15:55 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109455
No description provided.