Fix #109455: NLA editor tracks widgets backdrop is too small

Caused by d9f5ce2546cb which moved the NLA solo button to the right, but
didnt make the backdrop behind the right-hand-side widgets bigger. So
the first widget seemed "transparent" over the channel name.

Now make the backdrop bigger if the solo button is drawn.

Pull Request: https://projects.blender.org/blender/blender/pulls/109498